# ROBM-Challenge

./: README.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robm_bridge/lib/robm_bridge/: udp_bridge  zenoh_bridge
install/robm_bridge/share/robm_bridge/: package.sh  package.xml
install/robm_interfaces/share/robm_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robm_interfaces/share/robm_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  robm_interfacesConfig-version.cmake  robm_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robm_interfaces/share/robm_interfaces/environment/: ament_prefix_path.dsv  (+7 more)
install/robm_tp4_nav/lib/robm_tp4_nav/: control_heading  line_follower  move  obstacle_avoid  waypoints
install/robm_tp4_nav/share/robm_tp4_nav/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/robm_tp4_nav/: package.xml  setup.cfg  setup.py
src/robm_tp4_nav/launch/: control_heading_launch.xml  move_avoid_launch.xml  move_launch.xml
src/robm_tp4_nav/robm_tp4_nav/: control_heading.py  gripper.py  hard_trophy.py  move.py  obstacle_avoid.py  offroad.py  servo.py  simple_trophy.py  waypoints.py
(+75 files in other folders)
