<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robm_tp4_nav</name>
  <version>0.1.1</version>
  <description>Outils et squelettes de code pour le TP4/TP5 de ROBM</description>
  <maintainer email="vincent.drevellec@univ-rennes.fr">Vincent Drevelle</maintainer>
  <license>BSD-3-Clause</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robm_tp4_odom</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robm_bridge</exec_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
